--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -4,6 +4,7 @@
   "hello": "Welcome to a Greener Future",
   "subline": "We are an environmentally-conscious company based in Egypt. We specialize in projects and services that are efficient and support a ckeaner and greener environment.",
   "mission": "Our Mission",
+  "services": "Our Services",
   "missionText": "Our mission is to make everything green",
   "category": "Category",
   "allPosts": "All Posts",
