Modified hello statement

--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -1,7 +1,7 @@
 {
   "home": "Home",
 
-  "hello": "Welcome to a Greener Future",
+  "hello": "Synergizing Technology & Nature",
   "subline": "We are an environmentally-conscious company based in Egypt. We specialize in projects and services that are efficient and support a ckeaner and greener environment.",
   "mission": "Our Mission",
   "services": "Our Services",
